SMS-172 Code cleanup from static code review. And for the sceptics, a real bug surfaces yay! c/f SMS-171.